--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #022113; }
+  background: #669728; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5e8c9c; }
+  background: #32591c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f0abde; }
+  background: #056dc7; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #1493a2; }
+  background: #895b46; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a35a82; }
+  background: #d9f26f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e89bfa; }
+  background: #35c92a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #bb6d3a; }
+  background: #68bc5e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9ef8d7; }
+  background: #d9aab1; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f796cd; }
+  background: #1f40bd; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b87926; }
+  background: #ddc128; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #05c765; }
+  background: #65d538; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #16f613; }
+  background: #16954c; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #513df0; }
+  background: #20e17a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #065ba2; }
+  background: #494fd4; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #514e3e; }
+  background: #6e88f2; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #106231; }
+  background: #4253de; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #da5009; }
+  background: #9df0ef; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #e28801; }
+  background: #c3a86a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0511c3; }
+  background: #7f9828; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #666755; }
+  background: #89614f; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #b433e0; }
+  background: #37a1f2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #9ec4ad; }
+  background: #8ece4d; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4db567; }
+  background: #4ec532; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #285e10; }
+  background: #cacccf; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a4546b; }
+  background: #87c25a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #5a5b7f; }
+  background: #e810f0; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e1f50f; }
+  background: #2a4120; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #27c9b7; }
+  background: #de8a70; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #873951; }
+  background: #dd49ef; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b58a92; }
+  background: #2dd6b5; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2b5194; }
+  background: #ee3a19; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ce8812; }
+  background: #1dbc5e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a41ee0; }
+  background: #7ab7cb; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #a98d43; }
+  background: #764afc; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a51f75; }
+  background: #8e4851; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f63bd0; }
+  background: #57972a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #556c1a; }
+  background: #3348c9; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #de1390; }
+  background: #2e5be5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #7f34c3; }
+  background: #e450bb; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e4d4df; }
+  background: #b7694d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #6b644b; }
+  background: #bc82a8; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #dca5ce; }
+  background: #57d81a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #94d59b; }
+  background: #38cff9; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #9de330; }
+  background: #11e289; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9e66c0; }
+  background: #2e3a3d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #ae74a1; }
+  background: #0fdd33; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #abfe21; }
+  background: #81664c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f34bfd; }
+  background: #30dbdb; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ed6250; }
+  background: #f44e4d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ddaebc; }
+  background: #14d3e0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #4dcd95; }
+  background: #298fa6; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7b97e1; }
+  background: #7df4a3; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #49839a; }
+  background: #452e31; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #90189d; }
+  background: #aa5e49; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #babc07; }
+  background: #ed691f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #86252d; }
+  background: #c3e4cb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a5cf05; }
+  background: #63690a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ded76f; }
+  background: #1e8c73; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #34cb81; }
+  background: #85def7; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #bca318; }
+  background: #68039c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #f36de2; }
+  background: #2a4e11; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2384c8; }
+  background: #e9d145; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #795374; }
+  background: #2e5574; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d19373; }
+  background: #cabedf; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fdf23d; }
+  background: #fb8d84; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9b13b2; }
+  background: #65a1e3; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c6bb31; }
+  background: #5c12f2; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b66d8e; }
+  background: #96e1ed; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #1a489a; }
+  background: #96a2b3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #916d86; }
+  background: #80cf46; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b67733; }
+  background: #8a5214; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #726635; }
+  background: #0f21af; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #ea05b4; }
+  background: #512cf5; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #773393; }
+  background: #b055e3; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e90b06; }
+  background: #629465; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #cb46ca; }
+  background: #e20ea6; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #89d4f5; }
+  background: #fe436d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #6deebb; }
+  background: #837f7f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #46bd6b; }
+  background: #16ba5e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5235e3; }
+  background: #318f5b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #aa4209; }
+  background: #117a4a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #95fb1a; }
+  background: #7d912b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #866c8c; }
+  background: #ddb00b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #07ad49; }
+  background: #86a741; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e1b1c8; }
+  background: #7dc36b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #95f6f3; }
+  background: #421376; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #284c51; }
+  background: #8b8521; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #31990f; }
+  background: #691e56; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #b44c7a; }
+  background: #4151ba; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8db734; }
+  background: #1e10c9; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8983d4; }
+  background: #299cea; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a6877d; }
+  background: #1308f2; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #8e5591; }
+  background: #1071cc; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #319133; }
+  background: #1cd7a8; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ea3a08; }
+  background: #241ef6; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #500ea1; }
+  background: #1ed676; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #672aae; }
+  background: #947c80; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #a78c16; }
+  background: #b4137e; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #d602d2; }
+  background: #de4629; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #5a57a6; }
+  background: #ed7cfa; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10131,6 +10131,54 @@ table .bold-heading {
 .add-edit-connection-bottom-btn {
   margin-left: 60px; }
 
+.query-save-page-search-row {
+  margin-top: 40px; }
+
+.rounded-search-bar-full {
+  position: relative;
+  flex: 1; }
+  .rounded-search-bar-full:before {
+    content: " ";
+    position: absolute;
+    width: 30px;
+    height: 20px;
+    display: block;
+    background-image: url(../images/search.svg);
+    z-index: 2;
+    top: -7px;
+    margin: auto;
+    bottom: 0;
+    left: 12px; }
+  .rounded-search-bar-full input {
+    width: 100%;
+    padding: 14px 10px;
+    border: 0px solid #bababa;
+    padding-left: 40px;
+    border-radius: 40px; }
+  .rounded-search-bar-full .search-query-dropdown-btn {
+    position: absolute;
+    right: 15px;
+    top: 0px;
+    bottom: 0px;
+    margin: auto;
+    display: flex;
+    width: 20px; }
+
+.select-tags-listing {
+  display: flex;
+  align-items: center;
+  margin-left: 20px; }
+  .select-tags-listing a {
+    margin-left: 10px; }
+  .select-tags-listing .theme-select {
+    width: 300px;
+    padding: 14px 10px;
+    border: 0px solid #bababa;
+    border-radius: 6px; }
+
+.query-save-page-search-row {
+  display: flex; }
+
 @font-face {
   font-family: 'proxima-semi-bold';
   src: url("../fonts/ProximaNova-Semibold.woff2") format("woff2");
@@ -10775,18 +10823,21 @@ li.prev {
 .LoginPanel label {
   color: #4c4c4c; }
 
-input[type="text"],
-input[type="password"],
-textarea {
+.modal-add-connections-wrapper input[type="text"],
+.modal-add-connections-wrapper input[type="password"],
+.modal-add-connections-wrapper textarea,
+.LoginPanel input[type="text"],
+.LoginPanel input[type="password"],
+.LoginPanel textarea {
   border: 1px solid #cdcdd6;
   padding: 16px;
   font-size: 15px;
   border-radius: 5px;
   line-height: 1em;
   width: 100%;
-  color: #cbc9c9; }
-
-select {
+  color: #4c4c4c; }
+.modal-add-connections-wrapper select,
+.LoginPanel select {
   border: 1px solid #cdcdd6;
   padding: 5.5px;
   font-size: 15px;
