--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3564,3 +3564,73 @@ table .bold-heading {
 .add-edit-connection-bottom-btn {
   margin-left: 60px;
 }
+
+
+.query-save-page-search-row {
+  margin-top: 40px;
+}
+.rounded-search-bar-full {
+
+  position: relative;
+  flex: 1;
+
+&:before {
+    content: " ";
+    position: absolute;
+    width: 30px;
+    height: 20px;
+    display: block;
+    background-image: url(../images/search.svg);
+    z-index: 2;
+    top: -7px;
+    margin: auto;
+    bottom: 0;
+    left: 12px;
+}
+
+
+  input {
+    width: 100%;
+    padding: 14px 10px;
+    border: 0px solid #bababa;
+    padding-left: 40px;
+    border-radius: 40px;
+
+  }
+
+
+  .search-query-dropdown-btn {
+    position: absolute;
+    right: 15px;
+    top: 0px;
+    bottom: 0px;
+    margin: auto;
+    display: flex;
+    width: 20px;
+}
+   
+}
+
+
+.select-tags-listing {
+
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+
+  a {
+    margin-left: 10px;
+  }
+
+.theme-select {
+  width: 300px;
+  padding: 14px 10px;
+  border: 0px solid #bababa;
+  border-radius: 6px;
+}
+
+}
+
+.query-save-page-search-row {
+  display: flex;
+}
