--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #84930e; }
+  background: #eeef6d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #64502f; }
+  background: #f83879; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f24ca4; }
+  background: #af36de; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #f8a13d; }
+  background: #562b0d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1c9a1a; }
+  background: #d26e7b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f72923; }
+  background: #b3b204; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #38d3d6; }
+  background: #5791a0; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d1a17a; }
+  background: #6a1789; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2d6407; }
+  background: #4af389; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #dacde2; }
+  background: #0c2f69; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2122b1; }
+  background: #76db5b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #8235d9; }
+  background: #c2a0d9; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d2c119; }
+  background: #1d485e; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #efc005; }
+  background: #58477e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #034e99; }
+  background: #397b14; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5b813c; }
+  background: #717d53; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #11e657; }
+  background: #95b1d3; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #93f770; }
+  background: #d378d9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #fd4534; }
+  background: #446960; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #fce4f4; }
+  background: #391538; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2c7ea0; }
+  background: #036882; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #043606; }
+  background: #bd12c6; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9f1565; }
+  background: #077dbe; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #0b03ba; }
+  background: #c33ab1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #3a82f3; }
+  background: #2185e0; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e33cee; }
+  background: #504b04; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c72b35; }
+  background: #9db11f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4b8412; }
+  background: #cfe8ee; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d4a3c9; }
+  background: #92ab4d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #231316; }
+  background: #05bc35; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #8c3b89; }
+  background: #4baa0e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4fc9c5; }
+  background: #c0e841; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e476d7; }
+  background: #8194b0; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #bdce1b; }
+  background: #1efa55; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #919032; }
+  background: #e7c6d3; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #118153; }
+  background: #49e90e; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #917a52; }
+  background: #ae86a2; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ca5a80; }
+  background: #476b36; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #aeaabd; }
+  background: #0c3cd6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #3b379a; }
+  background: #a75d24; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #62f1a8; }
+  background: #11ec53; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #76cef6; }
+  background: #6451a0; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #bbc533; }
+  background: #4e5c2b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #40b4b7; }
+  background: #8ce0cd; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #4e8a06; }
+  background: #e449e1; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #9a37ee; }
+  background: #6821bd; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bb86e6; }
+  background: #1af27e; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8b2344; }
+  background: #2bca1c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #bcca83; }
+  background: #8c132b; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ca2746; }
+  background: #701970; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e54d89; }
+  background: #de63ec; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #0e48dc; }
+  background: #ff7ff1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4d1d65; }
+  background: #dbb1ed; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #573ad8; }
+  background: #b7240f; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #f5a34b; }
+  background: #f11124; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b399ea; }
+  background: #d82b46; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a478ac; }
+  background: #396d44; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #b7a80d; }
+  background: #e9cfef; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9a2c99; }
+  background: #0465fd; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9175bb; }
+  background: #2d98a6; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #263e23; }
+  background: #add640; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8529ae; }
+  background: #76734d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fd915c; }
+  background: #c4ce14; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #186328; }
+  background: #7ea795; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #358ca4; }
+  background: #fb7ed2; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e6865f; }
+  background: #50dcf7; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1cb235; }
+  background: #e83b68; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d180b6; }
+  background: #0cbbae; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0ef65c; }
+  background: #d5cd35; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #550bd7; }
+  background: #4e29ca; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b764ae; }
+  background: #55d424; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #1cbbc2; }
+  background: #321e75; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #28983c; }
+  background: #a6e854; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #aa08f3; }
+  background: #4d2bab; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #457fc1; }
+  background: #d99f81; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #330dfb; }
+  background: #f2bc60; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b6e982; }
+  background: #7c562c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #970973; }
+  background: #24972f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #c93101; }
+  background: #6ff81d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b38412; }
+  background: #a1deb7; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a7dc05; }
+  background: #56cee7; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #16570d; }
+  background: #c7a380; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #e60239; }
+  background: #afa769; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #cf80c8; }
+  background: #8388e8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ebf93d; }
+  background: #daa042; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #287fc5; }
+  background: #b3b5fa; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #230e99; }
+  background: #c30dc5; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #2bdd92; }
+  background: #5cb035; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ebf104; }
+  background: #1413f7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #3249ed; }
+  background: #c09417; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1b2fa6; }
+  background: #400d0e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ee298f; }
+  background: #c0a6e2; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #b8e6a5; }
+  background: #85122a; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3a6de2; }
+  background: #765a9f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f87cc1; }
+  background: #c0532d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #10aa71; }
+  background: #c012c9; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #105d27; }
+  background: #aa44af; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #cde8e1; }
+  background: #1a7b19; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #5eff8d; }
+  background: #b20f42; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #862099; }
+  background: #d73024; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10906,7 +10906,7 @@ li.prev {
 .LoginPanel .login-pass-div label.show-password-icon {
   background: url(../images/eye.png) no-repeat 0px center;
   cursor: pointer;
-  padding-left: 35px;
+  padding-left: 23px;
   position: absolute;
   top: 41px;
   right: 22px; }
