--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -778,3 +778,7 @@ input:checked+.sliders:before {
 .td-wrapper {
     margin-bottom: 20px;
 }
+
+.adapter-config-wrapper .add-edit-connection-btns a {
+    margin-right: 20px;
+}
